# team_site

./: .gitignore  admin.py  backup.dump  pyproject.toml
.github/workflows/: deploy.yml
football_team/: Dockerfile  README.md  db.json  db.sqlite3  manage.py  requirements.txt
football_team/football_team/: asgi.py  settings.py  urls.py  wsgi.py
football_team/gallery/: admin.py  models.py  settings.py  urls.py  views.py
football_team/gallery/migrations/: 0001_initial.py  0002_alter_image_data.py  0003_alter_image_data.py
football_team/static/css/: styles.css
football_team/static/js/: scripts.js
football_team/team/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
football_team/team/migrations/: 0001_initial.py  0002_alter_match_stage.py  0002_alter_teamvideo_options_and_more.py  0003_player_patronymic.py  0003_remove_match_result_match_goals_conceded_and_more.py  0004_coach_patronymic.py  0004_match_description_alter_match_goals_conceded_and_more.py  0005_alter_coach_date_of_birth_and_more.py  0005_player_in_the_team.py  0006_alter_coach_date_of_birth_and_more.py  0006_alter_player_in_the_team.py  0007_alter_player_main_photo.py  0007_player_number_player_unique_team_number.py  0008_alter_coach_photo.py  0008_coach_career.py  0009_alter_coach_team.py  0009_alter_player_additional_photos_and_more.py  0010_alter_coach_team.py  0010_alter_photo_options_alter_teamphoto_options_and_more.py  0011_alter_photo_options_alter_teamphoto_options_and_more.py  0013_alter_photo_options_alter_player_options_and_more.py  (+1 more)
football_team/templates/: base.html
(+14 files in other folders)
