[project]
name = "team-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.4",
    "django-imagekit>=5.0.0",
    "django-redis>=6.0.0",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
]
